# sample-agentic-aiops-k8s-sherlock

./: .env  .gitignore  INSTALLATION.md  README.md  pyproject.toml
scripts/: evaluate_sherlock.py  generate_traffic.py  test_orchestrator.py
src/sherlock/: config.py  mcp_server.py  orchestrator.py  prompts.py
src/sherlock/agents/: diagnostic_agent.py  observability_agent.py  persistence_agent.py
