[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sample-agentic-aiops-k8s-sherlock"
version = "0.1.0"
description = "Intelligent Kubernetes troubleshooting system using AI agents for automated incident response"
readme = "README.md"
authors = [
    { name = "ahmetatalay" },
     { name = "hasanbasriakirmak"}
]
keywords = ["kubernetes", "aiops", "sre", "agents", "troubleshooting"]
requires-python = ">=3.10"
dependencies = [
    "strands-agents==1.1.0",
    "strands-agents-tools==0.2.2",
    "mcp==1.12.2",
    "requests==2.32.4",
    "opentelemetry-api==1.35.0",
    "opentelemetry-sdk==1.35.0",
    "opentelemetry-exporter-otlp==1.35.0",
    "nest-asyncio==1.6.0",
    "langfuse==3.5.0"
]

[project.scripts]
sherlock-mcp-server = "sherlock.mcp_server:main"
sherlock-cli = "sherlock.cli:main"

[tool.setuptools.packages.find]
where = ["src"]